# task-ninja

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.py  config.yaml  pyproject.toml  requirements.txt  server.py
api/: dependencies.py  error_handlers.py
api/routers/: analytics.py  health.py  profiles.py  runs.py  settings.py  terminals.py  tickets.py
docs/: architecture.md
docs/plans/: 2026-03-06-scheduler-ui-design.md  2026-03-06-unified-ticket-modal-design.md  2026-03-06-v2-redesign.md  2026-03-07-pixel-office-design.md  2026-03-07-pixel-office-implementation.md  2026-04-09-copilot-prefix-echo-design.md  2026-04-09-copilot-submit-terminal-lifecycle-design.md  2026-04-09-prompt-verification-race-design.md  2026-04-09-terminal-prompt-submission-design.md
engine/: auth.py  bitbucket_client.py  broadcaster.py  claude_helper.py  env_manager.py  gchat_notifier.py  git_manager.py  jira_client.py  migrator.py  notifier.py  orchestrator.py  pr_manager.py  scheduler.py  state.py  terminal.py  ticket_watchdog.py  tmux.py  worker.py
migrations/: 0001_initial_schema.py  0002_seed_default_profile.py  0003_add_blocked_by_and_phase_timestamps.py  0004_add_pr_tracking.py  0005_add_pr_lifecycle.py  0006_add_predicted_files.py  0007_add_prompt_submission_requeues.py  0008_add_repo_pr_and_gchat_config.py  0009_remove_review_phase_from_profiles.py  0010_combine_pipeline_execute_jira_task.py  0011_restrict_gchat_events_default.py  0012_readd_review_phase_empty_prompts.py  init.sql  v2_project_based.sql  v3_phases_config.sql  v4_awaiting_input.sql
models/: ticket.py
static/: index.html
tests/: conftest.py  test_jira_client_extract.py  test_marker_injection.py  test_orchestrator_prioritize.py  test_submission_retry_policy.py  test_tmux_prompt_submit.py  test_worker_prompt_submission.py  test_worker_pty_read_loop.py  test_worker_viewer_lifecycle.py
